3rdParty/AlazarTech/ATS-SDK/5.8.2/Include/AlazarApi.h

	typedef void *			 HANDLE;
//#endif

typedef enum BoardTypes { 
	ATS_NONE,  // NO BOARD WAS FOUND
	ATS850, 
	ATS310, 
	ATS330,
	ATS855,
	ATS315,
	ATS335,
	ATS460,
	ATS860,
	ATS660,
	ATS665,
	ATS9462,
	ATS9434,
	ATS9870,
	ATS9350,
	ATS_LAST 
}ALAZAR_BOARDTYPES;
// Board Definition structure
typedef struct _BoardDef
{
    U32 RecordCount;
    U32 RecLength;
    U32 PreDepth;
    U32 ClockSource;
    U32 ClockEdge;
    U32 SampleRate;
    U32 CouplingChanA;
    U32 InputRangeChanA;
    U32 InputImpedChanA;
    U32 CouplingChanB;
    U32 InputRangeChanB;
    U32 InputImpedChanB;
    U32 TriEngOperation;
    U32 TriggerEngine1;
    U32 TrigEngSource1;
    U32 TrigEngSlope1;
    U32 TrigEngLevel1;
    U32 TriggerEngine2;
    U32 TrigEngSource2;
    U32 TrigEngSlope2;
    U32 TrigEngLevel2;
}BoardDef, *pBoardDef;
// Constants to be used in the Application when dealing with Custom FPGAs
#define FPGA_GETFIRST	0xFFFFFFFF
#define FPGA_GETNEXT	0xFFFFFFFE
#define FPGA_GETLAST	0xFFFFFFFC
RETURN_CODE AlazarGetOEMFPGAName(int opcodeID, char *FullPath, unsigned long *error);
RETURN_CODE AlazarOEMSetWorkingDirectory(char *wDir, unsigned long *error);
RETURN_CODE AlazarOEMGetWorkingDirectory(char *wDir, unsigned long *error);
RETURN_CODE AlazarParseFPGAName(const char *FullName, char *Name, U32 *Type, U32 *MemSize, U32 *MajVer, U32 *MinVer, U32 *MajRev, U32 *MinRev, U32 *error);
RETURN_CODE AlazarOEMDownLoadFPGA( HANDLE h,char *FileName,U32 *RetValue);
// ********************************************************************
// Header Constants and Structures that need to be used 
// when dealing with ADMA captures that use the header.
// ********************************************************************
#define ADMA_CLOCKSOURCE		0x00000001
#define ADMA_CLOCKEDGE			0x00000002
#define ADMA_SAMPLERATE			0x00000003
#define ADMA_INPUTRANGE			0x00000004
#define ADMA_INPUTCOUPLING		0x00000005
#define ADMA_IMPUTIMPEDENCE		0x00000006
#define ADMA_EXTTRIGGERED		0x00000007
#define ADMA_CHA_TRIGGERED		0x00000008
#define ADMA_CHB_TRIGGERED		0x00000009
#define ADMA_TIMEOUT			0x0000000A
#define ADMA_THISCHANTRIGGERED	0x0000000B
#define ADMA_SERIALNUMBER		0x0000000C
#define ADMA_SYSTEMNUMBER		0x0000000D
#define ADMA_BOARDNUMBER		0x0000000E
#define ADMA_WHICHCHANNEL		0x0000000F
#define ADMA_SAMPLERESOLUTION	0x00000010
#define ADMA_DATAFORMAT			0x00000011
typedef enum _AUTODMA_STATUS
{
    ADMA_Completed = 0,
    ADMA_Buffer1Invalid,
    ADMA_Buffer2Invalid,
    ADMA_BoardHandleInvalid,
    ADMA_InternalBuffer1Invalid,
    ADMA_InternalBuffer2Invalid,
    ADMA_OverFlow,
    ADMA_InvalidChannel,
    ADMA_DMAInProgress,
    ADMA_UseHeaderNotSet,
    ADMA_HeaderNotValid,
    ADMA_InvalidRecsPerBuffer,
	ADMA_InvalidTransferOffset,
	ADMA_InvalidCFlags
} AUTODMA_STATUS;
RETURN_CODE AlazarSetBWLimit( HANDLE h, U32 Channel, U32 enable);
RETURN_CODE AlazarSleepDevice( HANDLE h, U32 state);
U32  AlazarGetAutoDMAHeaderValue(HANDLE h, U32 Channel, void* DataBuffer, U32 Record, U32 Parameter, AUTODMA_STATUS *error);
float  AlazarGetAutoDMAHeaderTimeStamp(HANDLE h, U32 Channel, void* DataBuffer, U32 Record, AUTODMA_STATUS *error);
U32  AlazarWaitForBufferReady(HANDLE h, long tms);
RETURN_CODE  AlazarEvents(HANDLE h, U32 enable);
// TimeStamp Control Api
RETURN_CODE AlazarResetTimeStamp(HANDLE h, U32 resetFlag);
RETURN_CODE AlazarReadRegister(HANDLE hDevice,U32 offset,U32 *retVal, U32 pswrd);
RETURN_CODE AlazarWriteRegister(HANDLE hDevice,U32 offset,U32 Val, U32 pswrd);