3rdParty/AlazarTech/ATS-SDK/5.8.2/Include/ATSApiVB.bas


'********************************************************************
' Header Constants and Structures that need to be used
' when dealing with AutoDMA captures that use the header.
'********************************************************************
Public Const ADMA_CLOCKSOURCE               As Long = &H1
Public Const ADMA_CLOCKEDGE                 As Long = &H2
Public Const ADMA_SAMPLERATE                As Long = &H3
Public Const ADMA_INPUTRANGE                As Long = &H4
Public Const ADMA_INPUTCOUPLING             As Long = &H5
Public Const ADMA_IMPUTIMPEDENCE            As Long = &H6
Public Const ADMA_EXTTRIGGERED              As Long = &H7
Public Const ADMA_CHA_TRIGGERED             As Long = &H8
Public Const ADMA_CHB_TRIGGERED             As Long = &H9
Public Const ADMA_TIMEOUT                   As Long = &HA
Public Const ADMA_THISCHANTRIGGERED         As Long = &HB
Public Const ADMA_SERIALNUMBER              As Long = &HC
Public Const ADMA_SYSTEMNUMBER              As Long = &HD
Public Const ADMA_BOARDNUMBER               As Long = &HE
Public Const ADMA_WHICHCHANNEL              As Long = &HF
Public Const ADMA_SAMPLERESOLUTION          As Long = &H10
Public Const ADMA_DATAFORMAT                As Long = &H11
Public Declare Function AlazarGetAutoDMAHeaderValue Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Channel As Long, ByRef DataBuffer As Any, ByVal Record As Long, ByVal Parameter As Long, ByRef error As Long) As Long
Public Declare Function AlazarGetAutoDMAHeaderTimeStamp Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Channel As Long, ByRef DataBuffer As Any, ByVal Record As Long, ByRef error As Long) As Double
Public Declare Function AlazarWaitForBufferReady Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal tms As Long) As Long
Public Declare Function AlazarEvents Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal enable As Long) As Long
'********************************************************************
' Special Device operations for the ATS460, ATS660 and ATS860
'********************************************************************
Public Declare Function AlazarSetBWLimit Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Channel As Long, ByVal enable As Long) As Long
Public Declare Function AlazarSleepDevice Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal state As Long) As Long
Public Declare Function AlazarReadRegister Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal a As Long, ByRef b As Long, ByVal pswrd As Long) As Long
Public Declare Function AlazarWriteRegister Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal a As Long, ByVal b As Long, ByVal pswrd As Long) As Long
' TimeStamp Control Api
Public Declare Function AlazarResetTimeStamp Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal resetFlag As Long) As Long
'********************************************************************
' Custom/OEM Specific FPGA Image handling routines
'********************************************************************
Public Const FPGA_GETFIRST          As Long = &HFFFFFFFF
Public Const FPGA_GETNEXT           As Long = &HFFFFFFFE
Public Const FPGA_GETLAST           As Long = &HFFFFFFFC
Public Declare Function AlazarOEMDownLoadFPGA Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef FileName As Any, ByRef error As Long) As Integer
Public Declare Function AlazarParseFPGAName Lib "ATSApiVB.dll" (ByRef FullPath As Any, ByRef Name As Any, ByRef bType As Long, ByRef MemSize As Long, ByRef MajVer As Long, ByRef MinVer As Long, ByRef MajRev As Long, ByRef MinRev As Long, ByRef error As Long) As Long
Public Declare Function AlazarGetOEMFPGAName Lib "ATSApiVB.dll" (ByVal opcodeID As Long, ByRef FullPath As Any, ByRef error As Long) As Long
Public Declare Function AlazarOEMGetWorkingDirectory Lib "ATSApiVB.dll" (ByRef wDir As Any, ByRef error As Long) As Long
Public Declare Function AlazarOEMSetWorkingDirectory Lib "ATSApiVB.dll" (ByRef wDir As Any, ByRef error As Long) As Long

'
' Board Definition structure
'
Type BoardDef
    RecordCount As Long
    RecLength As Long
    PreDepth As Long
    ClockSource As Long
    ClockEdge As Long
    SampleRate As Long
    CouplingChanA As Long
    InputRangeChanA As Long
    InputImpedChanA As Long
    CouplingChanB As Long
    InputRangeChanB As Long
    InputImpedChanB As Long
    TriEngOperation As Long
    TriggerEngine1 As Long
    TrigEngSource1 As Long
    TrigEngSlope1 As Long
    TrigEngLevel1 As Long
    TriggerEngine2 As Long
    TrigEngSource2 As Long
    TrigEngSlope2 As Long
    TrigEngLevel2 As Long
End Type

Public Const ATS_NONE   As Integer = 0
Public Const ATS850     As Integer = 1
Public Const ATS310     As Integer = 2
Public Const ATS330     As Integer = 3
Public Const ATS855     As Integer = 4
Public Const ATS315     As Integer = 5
Public Const ATS335     As Integer = 6
Public Const ATS460     As Integer = 7
Public Const ATS860     As Integer = 8
Public Const ATS660     As Integer = 9
Public Const ATS665     As Integer = 10
Public Const ATS9462    As Integer = 11
Public Const ASTHOLDER5 As Integer = 12
Public Const ASTHOLDER6 As Integer = 13
Public Const ASTHOLDER7 As Integer = 14
Public Const ASTHOLDER8 As Integer = 15
Public Const ATS_LAST   As Integer = 16

'
' Sample Rate values
'
Public Const SAMPLE_RATE_1KSPS        As Long = &H1
Public Const SAMPLE_RATE_2KSPS        As Long = &H2
Public Const SAMPLE_RATE_5KSPS        As Long = &H4
Public Const SAMPLE_RATE_10KSPS       As Long = &H8
Public Const SAMPLE_RATE_20KSPS       As Long = &HA
Public Const SAMPLE_RATE_50KSPS       As Long = &HC
Public Const SAMPLE_RATE_100KSPS      As Long = &HE
Public Const SAMPLE_RATE_200KSPS      As Long = &H10
Public Const SAMPLE_RATE_500KSPS      As Long = &H12
Public Const SAMPLE_RATE_1MSPS        As Long = &H14
Public Const SAMPLE_RATE_2MSPS        As Long = &H18
Public Const SAMPLE_RATE_5MSPS        As Long = &H1A
Public Const SAMPLE_RATE_10MSPS       As Long = &H1C
Public Const SAMPLE_RATE_20MSPS       As Long = &H1E
Public Const SAMPLE_RATE_25MSPS       As Long = &H21
Public Const SAMPLE_RATE_50MSPS       As Long = &H22
Public Const SAMPLE_RATE_100MSPS      As Long = &H24
Public Const SAMPLE_RATE_125MSPS      As Long = &H25
Public Const SAMPLE_RATE_160MSPS      As Long = &H26
Public Const SAMPLE_RATE_180MSPS      As Long = &H27
Public Const SAMPLE_RATE_200MSPS      As Long = &H28
Public Const SAMPLE_RATE_250MSPS      As Long = &H2B
Public Const SAMPLE_RATE_500MSPS      As Long = &H30
Public Const SAMPLE_RATE_1GSPS        As Long = &H35
' user define sample rate - used with External Clock
Public Const SAMPLE_RATE_USER_DEF     As Long = &H40
' ATS660 Specific Setting for using the PLL
'
' The base value can be used to create a PLL frequency
' in a simple manner.
'
' Ex.
'        115 MHz = PLL_10MHZ_REF_100MSPS_BASE + 15000000
'        120 MHz = PLL_10MHZ_REF_100MSPS_BASE + 20000000
Public Const PLL_10MHZ_REF_100MSPS_BASE  As Long = &H5F5E100

' ATS660 Specific Decimation constants
Public Const DECIMATE_BY_8           As Integer = &H8
Public Const DECIMATE_BY_64          As Integer = &H40

'
' Impedance Values
'
Public Const IMPEDANCE_1M_OHM         As Integer = &H1
Public Const IMPEDANCE_50_OHM         As Integer = &H2
Public Const IMPEDANCE_75_OHM         As Integer = &H4
Public Const IMPEDANCE_300_OHM        As Integer = &H8

'
' Clock Source
'
Public Const INTERNAL_CLOCK           As Integer = &H1
Public Const EXTERNAL_CLOCK           As Integer = &H2
Public Const FAST_EXTERNAL_CLOCK      As Integer = &H2
Public Const MEDIUM_EXTERNAL_CLOCK    As Integer = &H3
Public Const SLOW_EXTERNAL_CLOCK      As Integer = &H4
Public Const EXTERNAL_CLOCK_AC        As Integer = &H5 'ATS660
Public Const EXTERNAL_CLOCK_DC        As Integer = &H6 'ATS660
Public Const EXTERNAL_CLOCK_10MHz_REF As Integer = &H7 'ATS660

'
' Clock Edge
'
Public Const CLOCK_EDGE_RISING        As Integer = &H0
Public Const CLOCK_EDGE_FALLING       As Integer = &H1

'
' Input Ranges
'
Public Const INPUT_RANGE_PM_20_MV     As Integer = &H1
Public Const INPUT_RANGE_PM_40_MV     As Integer = &H2
Public Const INPUT_RANGE_PM_50_MV     As Integer = &H3
Public Const INPUT_RANGE_PM_80_MV     As Integer = &H4
Public Const INPUT_RANGE_PM_100_MV    As Integer = &H5
Public Const INPUT_RANGE_PM_200_MV    As Integer = &H6
Public Const INPUT_RANGE_PM_400_MV    As Integer = &H7
Public Const INPUT_RANGE_PM_500_MV    As Integer = &H8
Public Const INPUT_RANGE_PM_800_MV    As Integer = &H9
Public Const INPUT_RANGE_PM_1_V       As Integer = &HA
Public Const INPUT_RANGE_PM_2_V       As Integer = &HB
Public Const INPUT_RANGE_PM_4_V       As Integer = &HC
Public Const INPUT_RANGE_PM_5_V       As Integer = &HD
Public Const INPUT_RANGE_PM_8_V       As Integer = &HE
Public Const INPUT_RANGE_PM_10_V      As Integer = &HF
Public Const INPUT_RANGE_PM_20_V      As Integer = &H10
Public Const INPUT_RANGE_PM_40_V      As Integer = &H11
Public Const INPUT_RANGE_PM_16_V      As Integer = &H12
Public Const INPUT_RANGE_HIFI         As Integer = &H20

'
' Coupling Values
'
Public Const AC_COUPLING              As Integer = &H1
Public Const DC_COUPLING              As Integer = &H2

'
' Trigger Engines
'
Public Const TRIG_ENGINE_J            As Integer = &H0
Public Const TRIG_ENGINE_K            As Integer = &H1

'
' Trigger Engine Operation
'
Public Const TRIG_ENGINE_OP_J             As Integer = &H0
Public Const TRIG_ENGINE_OP_K             As Integer = &H1
Public Const TRIG_ENGINE_OP_J_OR_K        As Integer = &H2
Public Const TRIG_ENGINE_OP_J_AND_K       As Integer = &H3
Public Const TRIG_ENGINE_OP_J_XOR_K       As Integer = &H4
Public Const TRIG_ENGINE_OP_J_AND_NOT_K   As Integer = &H5
Public Const TRIG_ENGINE_OP_NOT_J_AND_K   As Integer = &H6

'
' Trigger Engine Sources
'
Public Const TRIG_CHAN_A              As Integer = &H0
Public Const TRIG_CHAN_B              As Integer = &H1
Public Const TRIG_EXTERNAL            As Integer = &H2
Public Const TRIG_DISABLE             As Integer = &H3

'
' Trigger Slope
'
Public Const TRIGGER_SLOPE_POSITIVE   As Integer = &H1
Public Const TRIGGER_SLOPE_NEGATIVE   As Integer = &H2

'
' Channel Selection
'
Public Const CHANNEL_ALL              As Integer = &H0
Public Const CHANNEL_A                As Integer = &H1
Public Const CHANNEL_B                As Integer = &H2
Public Const CHANNEL_C                As Integer = &H3
Public Const CHANNEL_D                As Integer = &H4
Public Const CHANNEL_E                As Integer = &H5
Public Const CHANNEL_F                As Integer = &H6
Public Const CHANNEL_G                As Integer = &H7
Public Const CHANNEL_H                As Integer = &H8


'
' Master/Slave Configuration
'
Public Const BOARD_IS_INDEPENDENT     As Integer = &H0
Public Const BOARD_IS_MASTER          As Integer = &H1
Public Const BOARD_IS_SLAVE           As Integer = &H2
Public Const BOARD_IS_LAST_SLAVE      As Integer = &H3

'
' LED Control
'
Public Const LED_OFF                  As Integer = &H0
Public Const LED_ON                   As Integer = &H1

'
' Attenuator Relay
'
Public Const AR_X1                    As Integer = &H0
Public Const AR_DIV40                 As Integer = &H1

'
' External Trigger Attenuator Relay
'
Public Const ETR_DIV5                 As Integer = &H0
Public Const ETR_X1                   As Integer = &H1
Public Const ETR_5V                   As Integer = &H0
Public Const ETR_1V                   As Integer = &H1

'
' Device Sleep state
'
Public Const POWER_OFF               As Integer = &H0
Public Const POWER_ON                As Integer = &H1

'
' Software Events control
'
Public Const SW_EVENTS_OFF           As Integer = &H0
Public Const SW_EVENTS_ON            As Integer = &H1

'
' TimeStamp Value Reset Control
'
Public Const TIMESTAMP_RESET_FIRSTTIME_ONLY  As Integer = &H0
Public Const TIMESTAMP_RESET_ALWAYS          As Integer = &H1

